change not found message

--- a/lib/generators/infold/templates/install/config/locales/infold.en.yml
+++ b/lib/generators/infold/templates/install/config/locales/infold.en.yml
@@ -26,4 +26,4 @@ en:
       db_synced: DB sync is complete
     badge:
       required: Required
-    no_data: There is no data
+    no_data: Not found
